--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
     "@angular/compiler-cli": "^17.1.0",
     "@ngrx/eslint-plugin": "^17.1.1",
     "@types/jasmine": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "jasmine-core": "~5.1.0",
-    "json-server": "^1.0.0-alpha.23",
+    "json-server": "^0.17.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
@@ -46,10 +50,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "nodemon": "^3.1.0",
     "typescript": "~5.3.2",
-    "typescript-eslint": "^7.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-unused-imports": "^3.1.0"
+    "typescript-eslint": "^7.1.0"
   }
 }
