feature:  - trying to fix ASN1 import problem

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@lapo/asn1js": "^1.2.4",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "moment": "^2.30.1",
-    "@lapo/asn1js": "^1.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -39,6 +39,7 @@
     "@angular/compiler-cli": "^17.1.0",
     "@ngrx/eslint-plugin": "^17.1.1",
     "@types/jasmine": "~5.1.0",
+    "@types/lapo__asn1js": "^1.2.5",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
